<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.jd.framework</groupId>
        <artifactId>dong-boot-dependencies</artifactId>
        <version>2.1.0-HOTFIX-T2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <packaging>pom</packaging>

    <modules>
        <module>JD-ProductDetails-app</module>
        <module>JD-ProductDetails-client</module>
        <module>JD-ProductDetails-main</module>
        <module>JD-ProductDetails-web</module>
    </modules>

    <groupId>com.jd.JD-Design-Wiki</groupId>
    <artifactId>JD-ProductDetails</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>JD-ProductDetails</name>
    <description>Demo project for Dong Boot</description>
    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring.ai.verison>1.0.0</spring.ai.verison>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.jd.JD-Design-Wiki</groupId>
                <artifactId>JD-ProductDetails-app</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.jd.JD-Design-Wiki</groupId>
                <artifactId>JD-ProductDetails-client</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.jd.JD-Design-Wiki</groupId>
                <artifactId>JD-ProductDetails-main</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.jd.JD-Design-Wiki</groupId>
                <artifactId>JD-ProductDetails-web</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/sun.util.calendar=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED --add-opens java.base/sun.security.action=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-exports java.base/sun.net.util=ALL-UNNAMED --add-exports java.base/sun.reflect=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/javax.crypto.spec=ALL-UNNAMED -javaagent:${settings.localRepository}${file.separator}com${file.separator}jd${file.separator}framework${file.separator}dong-boot-test-agent${file.separator}1.0.1${file.separator}dong-boot-test-agent-1.0.1.jar</argLine>
                    <useManifestOnlyJar>false</useManifestOnlyJar>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>central</id>
            <name>libs-releases</name>
            <url>https://artifactory.jd.com/libs-releases</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>snapshots</id>
            <name>libs-snapshots</name>
            <url>https://artifactory.jd.com/libs-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <name>plugins-releases</name>
            <url>https://artifactory.jd.com/plugins-releases</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>snapshots</id>
            <name>plugins-snapshots</name>
            <url>https://artifactory.jd.com/plugins-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

</project>
